* Added map object trigger
* Added pause trigger
* Added move camera trigger
* Better enemy AI - basic pathfinding, real damage, action points
* Additional dungeon tiles
* Add trigger to spawn characters
* Better menus for load and new game
* Basics for data validation
* Properly handle character death and game loss
* Special abilities for characters
* Improved scripting
* Destructable objects
* Replicate the first original campaign scenario

v0.7.0
* Full rebuild of game
* Much more flexible and detailed data loading system
* More editors for various objects
* Editors now embedded in game
* Clear documentation for all data objects

NOTES: v0.7.0 is not compatible with maps or saves from earlier versions.

v0.8.0 (unreleased)
* Added the ability to remove entities in map editor.
* Added the ability to select and edit entities in map editor.
* Slightly better movement for enemies
* Add simple controls UI
* Added January character and bell mechanics
* Improve in-game dialog system (closer to real life)
* Dialog can now be closed with key input rather than button
* Add simple script editor
* Add character editor
* Added Wizard Whitebeard character and magic flame mechanisms
* Added directions for characters
* Added equipment slots for characters
* Equipment as an item in modules and editor
* Equipment assign and unassign dialog
* Max HP and Action Points can be modified by equipment
* Improve green square for selection of spaces
* Validation system for saves
* Basic menu for character stats

Bug Fixes:
* Sir Jacob is no longer stopped by chests
* Quit button when in game now returns you to the main menu
* Placing a character in the editor will no longer duplicate the character
* Changing the manifest now correctly renames the manifest file
* Entity editor no longer saves various numeric fields as strings
* Game no longer crashes when going into combat with a character that has no max HP
* Ryder is now disabled on map 1 when Sir Jacob is in the initial fight sequence